BBBY Gain: $ -4.54 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4
BBBY Gain: $ -8.04 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TR_QP_DB6
BBBY Gain: $ -3.61 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_TR_DB6
BBBY Gain: $ -3.38 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_AV_DB6
BBBY Gain: $ 9.89 Win %: 81.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_AL_DB6
BBBY Gain: $ -5.02 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_QP_DB6
BBBY Gain: $ -4.6 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_TR_DB6
BBBY Gain: $ -6.75 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_AV_DB6
BBBY Gain: $ -8.22 Win %: 43.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_QP_DB6
BBBY Gain: $ -0.73 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT_QL_DB6
BBBY Gain: $ -8.21 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT_QP_DB6
BBBY Gain: $ -2.73 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TR_IR1
BBBY Gain: $ -1.59 Win %: 68.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TR_TS
BBBY Gain: $ -7.62 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TR_QP
BBBY Gain: $ -4.11 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_QP_IR1
BBBY Gain: $ -3.7 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_TR
BBBY Gain: $ -6.1 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_AV
BBBY Gain: $ 9.57 Win %: 87.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_AL
BBBY Gain: $ -4.48 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV_QP
BBBY Gain: $ -5.75 Win %: 62.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_TR
BBBY Gain: $ -9.03 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_AV
BBBY Gain: $ 5.71 Win %: 75.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_AL
BBBY Gain: $ -9.31 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM_QP
BBBY Gain: $ 3.44 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT_QL
BBBY Gain: $ -7.62 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT_QP
BBBY Gain: $ -1.55 Win %: 68.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT_TS
BBBY Gain: $ -4.54 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AO_AC
BBBY Gain: $ -9.03 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_QP_PM
BBBY Gain: $ 4.2 Win %: 75.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AV_TS
BBBY Gain: $ 5.22 Win %: 81.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AL_TS
BBBY Gain: $ -0.08 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_RV
BBBY Gain: $ 3.82 Win %: 75.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IR1
BBBY Gain: $ -4.84 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TR
BBBY Gain: $ -6.75 Win %: 43.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AV
BBBY Gain: $ 7.79 Win %: 81.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AL
BBBY Gain: $ -3.21 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_VI
BBBY Gain: $ -0.08 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_LI
BBBY Gain: $ -5.77 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_QP
BBBY Gain: $ -5.2 Win %: 62.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_HM
BBBY Gain: $ 2.34 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_SS
BBBY Gain: $ 0.75 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_QL
BBBY Gain: $ -5.7 Win %: 50.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_DB6
BBBY Gain: $ -4.54 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AO
BBBY Gain: $ -4.54 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_AC
BBBY Gain: $ -2.29 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_IT
BBBY Gain: $ -5.2 Win %: 56.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_PM
BBBY Gain: $ -1.12 Win %: 68.00 in 16 days with algo TB5_OC_QM_OB4_OS4_CB4_CS4_TS
BBBY Gain: $ -21.23 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TR_QP_DB30
BBBY Gain: $ -2.4 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_TR_DB30
BBBY Gain: $ -7.49 Win %: 50.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_AV_DB30
BBBY Gain: $ -18.28 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_AL_DB30
BBBY Gain: $ -85.75 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_QP_DB30
BBBY Gain: $ -2.46 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_TR_DB30
BBBY Gain: $ -8.89 Win %: 50.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_AV_DB30
BBBY Gain: $ -86.05 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_QP_DB30
BBBY Gain: $ -4.85 Win %: 25.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT_QL_DB30
BBBY Gain: $ -85.79 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT_QP_DB30
BBBY Gain: $ -2.73 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TR_IR5
BBBY Gain: $ 2.58 Win %: 50.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TR_TS
BBBY Gain: $ -23.59 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TR_QP
BBBY Gain: $ -72.52 Win %: 12.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_QP_IR5
BBBY Gain: $ 3.75 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_TR
BBBY Gain: $ 4.54 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_AV
BBBY Gain: $ -23.07 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_AL
BBBY Gain: $ -120.52 Win %: 12.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV_QP
BBBY Gain: $ 1.98 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_TR
BBBY Gain: $ 1.83 Win %: 50.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_AV
BBBY Gain: $ -27.62 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_AL
BBBY Gain: $ -121.26 Win %: 12.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM_QP
BBBY Gain: $ -8.74 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT_QL
BBBY Gain: $ -120.52 Win %: 12.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT_QP
BBBY Gain: $ -46.36 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT_TS
BBBY Gain: $ -43.16 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AO_AC
BBBY Gain: $ -43.76 Win %: 6.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_QP_PM
BBBY Gain: $ 1.82 Win %: 50.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AV_TS
BBBY Gain: $ -15.57 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AL_TS
BBBY Gain: $ -42.25 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_RV
BBBY Gain: $ -45.75 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IR5
BBBY Gain: $ 1.55 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TR
BBBY Gain: $ 4.54 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AV
BBBY Gain: $ -23.07 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AL
BBBY Gain: $ -13.89 Win %: 31.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_VI
BBBY Gain: $ -41.25 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_LI
BBBY Gain: $ -120.52 Win %: 12.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_QP
BBBY Gain: $ -42.75 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_HM
BBBY Gain: $ -29.21 Win %: 43.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_SS
BBBY Gain: $ -8.18 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_QL
BBBY Gain: $ -33.72 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_DB30
BBBY Gain: $ -42.22 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AO
BBBY Gain: $ -42.22 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_AC
BBBY Gain: $ -46.5 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_IT
BBBY Gain: $ -28.71 Win %: 18.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_PM
BBBY Gain: $ -43.08 Win %: 37.00 in 16 days with algo TB1_CC_QM_OB1_OS1_CB2_CS2_TS
BBBY Gain: $ -2.53 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
BBBY Gain: $ 6.86 Win %: 62.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
BBBY Gain: $ -0.38 Win %: 62.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
BBBY Gain: $ 2.8 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
BBBY Gain: $ -11.16 Win %: 43.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
BBBY Gain: $ 6.3 Win %: 50.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
BBBY Gain: $ 7.23 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
BBBY Gain: $ -9.58 Win %: 50.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
BBBY Gain: $ 0.91 Win %: 43.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
BBBY Gain: $ -8.78 Win %: 50.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
BBBY Gain: $ 9.05 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TR_IR4
BBBY Gain: $ 3.6 Win %: 75.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TR_TS
BBBY Gain: $ -0.28 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TR_QP
BBBY Gain: $ 0.69 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_QP_IR4
BBBY Gain: $ 7.86 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_TR
BBBY Gain: $ 7.76 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_AV
BBBY Gain: $ 9.45 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_AL
BBBY Gain: $ -19.76 Win %: 31.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV_QP
BBBY Gain: $ 7.4 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_TR
BBBY Gain: $ 8.11 Win %: 62.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_AV
BBBY Gain: $ 6.21 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_AL
BBBY Gain: $ -16.55 Win %: 31.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM_QP
BBBY Gain: $ 8.13 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT_QL
BBBY Gain: $ -17.3 Win %: 31.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT_QP
BBBY Gain: $ -3.91 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT_TS
BBBY Gain: $ 7.43 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AO_AC
BBBY Gain: $ -9.64 Win %: 37.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_QP_PM
BBBY Gain: $ 4.13 Win %: 75.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AV_TS
BBBY Gain: $ 5.0 Win %: 75.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AL_TS
BBBY Gain: $ 7.96 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_RV
BBBY Gain: $ 9.98 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IR4
BBBY Gain: $ 8.53 Win %: 75.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TR
BBBY Gain: $ 7.76 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AV
BBBY Gain: $ 7.98 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AL
BBBY Gain: $ 6.38 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_VI
BBBY Gain: $ 0.73 Win %: 62.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_LI
BBBY Gain: $ -17.3 Win %: 31.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_QP
BBBY Gain: $ 5.76 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_HM
BBBY Gain: $ 8.55 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_SS
BBBY Gain: $ 8.32 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_QL
BBBY Gain: $ 3.8 Win %: 50.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_DB15
BBBY Gain: $ 7.43 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AO
BBBY Gain: $ 7.45 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_AC
BBBY Gain: $ -0.86 Win %: 50.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_IT
BBBY Gain: $ 4.91 Win %: 56.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_PM
BBBY Gain: $ 1.81 Win %: 68.00 in 16 days with algo TB2_OO_QM_OB2_OS2_CB5_CS5_TS
BBBY Gain: $ -5.18 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB30
BBBY Gain: $ 7.94 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB30
BBBY Gain: $ -7.55 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB30
BBBY Gain: $ -0.69 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB30
BBBY Gain: $ -8.15 Win %: 43.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB30
BBBY Gain: $ 11.01 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB30
BBBY Gain: $ -4.85 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB30
BBBY Gain: $ -8.14 Win %: 43.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB30
BBBY Gain: $ -1.83 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB30
BBBY Gain: $ -10.68 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB30
BBBY Gain: $ 11.37 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR5
BBBY Gain: $ 4.06 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TR_TS
BBBY Gain: $ -1.53 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
BBBY Gain: $ -2.15 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR5
BBBY Gain: $ 14.32 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
BBBY Gain: $ 5.21 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
BBBY Gain: $ 11.59 Win %: 62.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
BBBY Gain: $ -4.07 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
BBBY Gain: $ 12.29 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
BBBY Gain: $ -1.66 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
BBBY Gain: $ 8.38 Win %: 62.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
BBBY Gain: $ -5.69 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
BBBY Gain: $ 6.06 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
BBBY Gain: $ -2.47 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
BBBY Gain: $ 2.06 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT_TS
BBBY Gain: $ 0.68 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
BBBY Gain: $ -3.02 Win %: 43.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
BBBY Gain: $ 5.36 Win %: 87.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AV_TS
BBBY Gain: $ 3.12 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AL_TS
BBBY Gain: $ 12.38 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_RV
BBBY Gain: $ 11.36 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IR5
BBBY Gain: $ 14.51 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TR
BBBY Gain: $ 5.23 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AV
BBBY Gain: $ 11.61 Win %: 62.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AL
BBBY Gain: $ 5.98 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_VI
BBBY Gain: $ 12.58 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_LI
BBBY Gain: $ -2.47 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_QP
BBBY Gain: $ 8.14 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_HM
BBBY Gain: $ 9.55 Win %: 68.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_SS
BBBY Gain: $ 12.82 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_QL
BBBY Gain: $ 4.03 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_DB30
BBBY Gain: $ 11.75 Win %: 75.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AO
BBBY Gain: $ 5.66 Win %: 56.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_AC
BBBY Gain: $ 5.87 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_IT
BBBY Gain: $ 1.39 Win %: 50.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_PM
BBBY Gain: $ 2.42 Win %: 81.00 in 16 days with algo TB1_HL_LO_QM_OB1_OS1_CB5_CS5_TS
BBBY Gain: $ -0.46 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
BBBY Gain: $ -10.15 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
BBBY Gain: $ -7.03 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
BBBY Gain: $ -10.94 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
BBBY Gain: $ 0.12 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
BBBY Gain: $ -12.07 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
BBBY Gain: $ -9.09 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
BBBY Gain: $ -4.51 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
BBBY Gain: $ -1.65 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
BBBY Gain: $ -0.99 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
BBBY Gain: $ -9.91 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR1
BBBY Gain: $ -2.16 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TR_TS
BBBY Gain: $ -2.63 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BBBY Gain: $ -6.26 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR1
BBBY Gain: $ -10.89 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BBBY Gain: $ -5.97 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BBBY Gain: $ -10.53 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BBBY Gain: $ -1.84 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BBBY Gain: $ -12.03 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BBBY Gain: $ -9.48 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BBBY Gain: $ -15.91 Win %: 25.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BBBY Gain: $ -5.84 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BBBY Gain: $ -3.63 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BBBY Gain: $ -3.09 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BBBY Gain: $ -0.27 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT_TS
BBBY Gain: $ -8.13 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BBBY Gain: $ -0.35 Win %: 62.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BBBY Gain: $ 3.19 Win %: 62.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AV_TS
BBBY Gain: $ -1.44 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AL_TS
BBBY Gain: $ -1.78 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BBBY Gain: $ -9.85 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IR1
BBBY Gain: $ -12.57 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BBBY Gain: $ -5.97 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BBBY Gain: $ -12.73 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BBBY Gain: $ -10.08 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BBBY Gain: $ -20.14 Win %: 18.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BBBY Gain: $ -3.09 Win %: 56.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BBBY Gain: $ -14.26 Win %: 25.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BBBY Gain: $ -4.01 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BBBY Gain: $ -8.06 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BBBY Gain: $ -11.25 Win %: 37.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_DB6
BBBY Gain: $ -11.63 Win %: 31.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BBBY Gain: $ -5.46 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BBBY Gain: $ -7.59 Win %: 43.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BBBY Gain: $ -4.78 Win %: 68.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BBBY Gain: $ -1.58 Win %: 50.00 in 16 days with algo TB5_HL_LO_QM_OB3_OS3_CB5_CS5_TS
