BGI Gain: $ 0.07 Win %: 100.00 in 1 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TS
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3
BGI Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TR_QP_DB15
BGI Gain: $ 0.23 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_TR_DB15
BGI Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_AV_DB15
BGI Gain: $ 0.47 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_AL_DB15
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_QP_DB15
BGI Gain: $ 0.18 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_TR_DB15
BGI Gain: $ 0.11 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_AV_DB15
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_QP_DB15
BGI Gain: $ 0.45 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IT_QL_DB15
BGI Gain: $ -0.04 Win %: 50.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IT_QP_DB15
BGI Gain: $ 0.09 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TR_IR4
BGI Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TR_QP
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_QP_IR4
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_AL
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV_QP
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_AL
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IT_QL
BGI Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IT_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_AO_AC
BGI Gain: $ 0.01 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_QP_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TR_TS
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_RV
BGI Gain: $ 0.35 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IR4
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_AL
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_VI
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_LI
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_HM
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_SS
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_QL
BGI Gain: $ 0.45 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_DB15
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_AO
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_AC
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_IT
BGI Gain: $ 0.28 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB3_CS3_TS
BGI Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TR_QP_DB15
BGI Gain: $ 0.28 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_TR_DB15
BGI Gain: $ 0.11 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_AV_DB15
BGI Gain: $ 0.47 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_AL_DB15
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_QP_DB15
BGI Gain: $ 0.23 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_TR_DB15
BGI Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_AV_DB15
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_QP_DB15
BGI Gain: $ 0.45 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IT_QL_DB15
BGI Gain: $ -0.04 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IT_QP_DB15
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TR_IR4
BGI Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TR_QP
BGI Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_QP_IR4
BGI Gain: $ 0.2 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_TR
BGI Gain: $ -0.06 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_AL
BGI Gain: $ 0.13 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV_QP
BGI Gain: $ 0.2 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_TR
BGI Gain: $ -0.06 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_AL
BGI Gain: $ 0.13 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IT_QL
BGI Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IT_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_AO_AC
BGI Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_QP_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TR_TS
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_RV
BGI Gain: $ 0.35 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IR4
BGI Gain: $ 0.2 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TR
BGI Gain: $ -0.06 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_AL
BGI Gain: $ -0.09 Win %: 50.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_VI
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_LI
BGI Gain: $ 0.13 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_QP
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_HM
BGI Gain: $ 0.2 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_SS
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_QL
BGI Gain: $ 0.45 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_DB15
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_AO
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_AC
BGI Gain: $ 0.42 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_IT
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_CC_QM_OB4_OS4_CB4_CS4_TS
BGI Gain: $ -1.03 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TR_QP_DB15
BGI Gain: $ 0.18 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_TR_DB15
BGI Gain: $ -0.73 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_AV_DB15
BGI Gain: $ 0.13 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_AL_DB15
BGI Gain: $ -1.05 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_QP_DB15
BGI Gain: $ 0.28 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_TR_DB15
BGI Gain: $ -0.73 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_AV_DB15
BGI Gain: $ -1 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_QP_DB15
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IT_QL_DB15
BGI Gain: $ -0.02 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IT_QP_DB15
BGI Gain: $ 0.03 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TR_IR4
BGI Gain: $ -1.42 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TR_QP
BGI Gain: $ -1.44 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_QP_IR4
BGI Gain: $ 0.03 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_TR
BGI Gain: $ -0.75 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_AV
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_AL
BGI Gain: $ -1.5 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV_QP
BGI Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_TR
BGI Gain: $ 0.33 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_AV
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_AL
BGI Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM_QP
BGI Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IT_QL
BGI Gain: $ -0.01 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IT_QP
BGI Gain: $ -13.14 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_AO_AC
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_QP_PM
BGI Gain: $ 0.09 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TR_TS
BGI Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_RV
BGI Gain: $ 0.41 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IR4
BGI Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TR
BGI Gain: $ -0.75 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_AV
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_AL
BGI Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_VI
BGI Gain: $ 0.1 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_LI
BGI Gain: $ -1.45 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_QP
BGI Gain: $ 0.41 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_HM
BGI Gain: $ 0.41 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_SS
BGI Gain: $ 0.41 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_QL
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_DB15
BGI Gain: $ 0.19 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_AO
BGI Gain: $ -1.05 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_AC
BGI Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_IT
BGI Gain: $ -0.01 Win %: 50.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_PM
BGI Gain: $ 0.09 Win %: 100.00 in 2 days with algo TB2_HL_QM_OB2_OS2_CB4_CS4_TS
BGI Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TR_QP_DB15
BGI Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_TR_DB15
BGI Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_AV_DB15
BGI Gain: $ 0.47 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_AL_DB15
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_QP_DB15
BGI Gain: $ 0.11 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_TR_DB15
BGI Gain: $ 0.11 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_AV_DB15
BGI Gain: $ 0.15 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_QP_DB15
BGI Gain: $ 0.43 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IT_QL_DB15
BGI Gain: $ -0.04 Win %: 50.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IT_QP_DB15
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TR_IR4
BGI Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TR_QP
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_QP_IR4
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_AL
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV_QP
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_AL
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM_QP
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IT_QL
BGI Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IT_QP
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_AO_AC
BGI Gain: $ 0.01 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_QP_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TR_TS
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_RV
BGI Gain: $ 0.33 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IR4
BGI Gain: $ 0.25 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TR
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_AV
BGI Gain: $ 0.39 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_AL
BGI Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_VI
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_LI
BGI Gain: $ 0.14 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_QP
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_HM
BGI Gain: $ 0.08 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_SS
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_QL
BGI Gain: $ 0.43 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_DB15
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_AO
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_AC
BGI Gain: $ 0.4 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_IT
BGI Gain: $ 0.37 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_PM
BGI Gain: $ 0.07 Win %: 100.00 in 2 days with algo TB2_OC_QM_OB3_OS3_CB4_CS4_TS
